--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.15.1",
+    "v-charts": "^1.19.0",
+    "v-echarts": "^1.0.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
@@ -28,7 +32,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "node-sass": "^5.0.0",
+    "sass": "1.26.8",
+    "sass-loader": "^7.3.1"
   },
   "eslintConfig": {
     "root": true,
